site/gip-inclusion/data-inclusion-schema/0.22.0/documentation.md
<MenuSchema />

<MenuSchema />

## data-inclusion-schema

Services de l'inclusion

Services de l'inclusion

- Site web : https://github.com/gip-inclusion/data-inclusion-schema
- Version : 0.22.0

### Arborescence des propriétés :

#### Adresse - Propriété adresse
- Valeur optionnelle

#### Code Insee - Propriété code_insee
- Valeur optionnelle

#### Code Postal - Propriété code_postal
- Valeur optionnelle

#### Commune - Propriété commune
- Valeur optionnelle

#### Complement Adresse - Propriété complement_adresse
- Valeur optionnelle

#### Contact Nom Prenom - Propriété contact_nom_prenom
- Valeur optionnelle

#### Contact Public - Propriété contact_public
- Valeur optionnelle

#### Courriel - Propriété courriel
- Valeur optionnelle

#### Cumulable - Propriété cumulable
- Valeur optionnelle

#### Date Creation - Propriété date_creation
- Valeur optionnelle

#### Date de dernière modification - Propriété date_maj
> *Description : Date de dernière modification du service chez le producteur de données.*<br>
> *Exemple : 2025-02-14*
- Valeur obligatoire
- Type : chaîne de caractères

#### Date Suspension - Propriété date_suspension
- Valeur optionnelle

#### Formulaire En Ligne - Propriété formulaire_en_ligne
- Valeur optionnelle

#### Frais - Propriété frais
- Valeur optionnelle

#### Frais Autres - Propriété frais_autres
- Valeur optionnelle

#### Id - Propriété id
- Valeur obligatoire
- Type : chaîne de caractères

#### Justificatifs - Propriété justificatifs
- Valeur optionnelle

#### Latitude - Propriété latitude
- Valeur optionnelle

#### Lien Source - Propriété lien_source
- Valeur optionnelle

#### Longitude - Propriété longitude
- Valeur optionnelle

#### Modes Accueil - Propriété modes_accueil
- Valeur optionnelle

#### Modes Orientation Accompagnateur - Propriété modes_orientation_accompagnateur
- Valeur optionnelle

#### Modes Orientation Accompagnateur Autres - Propriété modes_orientation_accompagnateur_autres
- Valeur optionnelle

#### Modes Orientation Beneficiaire - Propriété modes_orientation_beneficiaire
- Valeur optionnelle

#### Modes Orientation Beneficiaire Autres - Propriété modes_orientation_beneficiaire_autres
- Valeur optionnelle

#### Nom - Propriété nom
> *Description : Nom du service.  Chaîne de caractères entre 3 et 150 caractères, ne se terminant pas par un point.*<br>
> *Exemple : Atelier insertion et posture professionnelle*
- Valeur obligatoire
- Type : chaîne de caractères

#### Page Web - Propriété page_web
> *Description : Lien vers une page web dédiée au service sur le site web de la structure. Ce champ n'est pas destiné à recevoir un lien vers le site d'un producteur de donnée.*<br>
> *Exemple : https://insersol.fr/biclou-atelier-reparation-participatif-solidaire/*
- Valeur optionnelle

#### Pre Requis - Propriété pre_requis
- Valeur optionnelle

#### Presentation Detail - Propriété presentation_detail
- Valeur optionnelle

#### Presentation Resume - Propriété presentation_resume
- Valeur optionnelle

#### Prise Rdv - Propriété prise_rdv
- Valeur optionnelle

#### Profils - Propriété profils
- Valeur optionnelle

#### Profils Precisions - Propriété profils_precisions
- Valeur optionnelle

#### Recurrence - Propriété recurrence
- Valeur optionnelle

#### Source - Propriété source
- Valeur obligatoire
- Type : chaîne de caractères

#### Structure Id - Propriété structure_id
- Valeur obligatoire
- Type : chaîne de caractères

#### Telephone - Propriété telephone
- Valeur optionnelle

#### Thematiques - Propriété thematiques
- Valeur optionnelle

#### Types - Propriété types
- Valeur optionnelle

#### Zone Diffusion Code - Propriété zone_diffusion_code
- Valeur optionnelle

#### Zone Diffusion Nom - Propriété zone_diffusion_nom
- Valeur optionnelle

